--- a/styles/less/section.less
+++ b/styles/less/section.less
@@ -1,8 +1,8 @@
 // Section Related
 .section {
     position: relative;
+    margin-top: 50px;
     width   : 100%;
-    height  : 500px;
 
     .lead {
         width       : 70%;
@@ -22,4 +22,8 @@
         font-weight: 400;
         padding    : 20px;
     }
+}
+
+.sized-section {
+    .section;
 }
