added photo and finished resume

--- a/styles/less/section.less
+++ b/styles/less/section.less
@@ -1,15 +1,15 @@
 // Section Related
 .section {
-    position: relative;
-    margin-top: 50px;
-    width   : 100%;
+    position      : relative;
+    width         : 100%;
+    padding-top   : 60px;
+    padding-bottom: 60px;
 
     .lead {
         width       : 70%;
         height      : 100px;
         position    : relative;
         top         : 50%;
-        margin-top  : -50px;
         margin-left : auto;
         margin-right: auto;
         font-size   : 1.5em;
@@ -17,10 +17,22 @@
         text-align  : center;
     }
 
-    h3 {
+    p {
+        font-weight: 100;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
         text-align : center;
         font-weight: 400;
         padding    : 20px;
+    }
+
+    .l-text {
+        padding-left: 0px;
     }
 }
 
