--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -3,6 +3,18 @@
     margin-right: auto;
 }
 
+.h-center {
+    margin: 0px auto;
+}
+.center-text {
+    text-align: center!important;
+}
+
+.l-text {
+    text-align: left!important;
+}
+
+
 .flex {
     display: flex;
 }
@@ -14,7 +26,7 @@ img {
 
 .cont {
     width    : 80%;
-    max-width: 1100px;
+    max-width: 780px;
     margin   : 0px auto;
     position : relative;
 }
