--- a/styles/less/navigation.less
+++ b/styles/less/navigation.less
@@ -1,6 +1,7 @@
 // Navigation Related
 .small-nav {
     height: @navHeight - 50px;
+    opacity: 0.9;
 
     >h3 {
         font-size    : 20px;
@@ -18,6 +19,7 @@ nav {
     top       : 0px;
     position  : fixed;
     background: @colorThemeWhite;
+    opacity: 1;
 
     >h3 {
         .transAll;
